# django_gb_lms

./: .gitignore  README.md  pyproject.toml
project/config/: settings.py  urls.py
project/mainapp/: admin.py  models.py  urls.py  views.py
project/mainapp/migrations/: 0001_initial.py  0002_dump_data.py
project/mainapp/templates/mainapp/: contacts.html  course_detail.html  courses_list.html  doc_site.html  index.html  login.html  news.html  news_detail.html
project/mainapp/templatetags/: nav_tags.py
project/templates/: base.html  footer.html  nav.html
