[tool.poetry]
name = "project-gb-lms"
version = "0.1.0"
description = ""
authors = ["Willy Wonka <Woodenehad9798740@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_gb_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
isort = "^5.11.3"
black = "^22.12.0"
autoflake = "^2.0.0"
python-dotenv = "^0.21.0"
djhtml = "^1.5.2"
djlint = "^1.19.9"
django-markdownify = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
